forget password api's

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
 DATABASE_URL=postgresql://<User>:<Pass>@<host>/<dbname>?sslmode=require
+
+# JWT Configuration
 RSA_PRIVATE_KEY=<private_key_pem>
+
+
+# Email Service Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+EMAIL_FROM=<from_email>
+EMAIL_PASSWORD=<app_password>
